@@ -160,6 +160,7 @@
 	- proof-of-concept rpmcache functionality.
 	- fix: do lazy open of database in rpmtsInitDB() (#67994).
 	- update rpmcache.8.
+	- fix: permit deletions of added packages (#67108).
 
 4.0.3 -> 4.0.4:
 	- solaris: translate i86pc to i386 (#57182).
